Fix deprecated URL(String) usage in LLM add-on